# chatbot

./: .env.example  .env.production.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile.postgres  RUNBOOK.md  SYSTEM-PROMPT.md  bot-up.sh  deploy.sh  docker-compose.botilleria.yml  docker-compose.chatbot.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  plan-optimizacion.md  plan-reevaluacion-red-team.md  playwright.config.js  pytest.ini  rollback.sh  run.sh  rundev.sh  runprod.sh  setup-ssl.sh  setup_chatbot_docker.sh
core/: AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
core/.antigravitycli/: 5dc8a5d0-f481-48e3-8aea-4108bdcec8f3.json
core/agents/: __init__.py  constants.py  context.py  root_agent.py
core/app/: container.py  lifespan.py  security.py
core/config/: database.py  redis.py  settings.py  value_limits.py
core/controllers/: __init__.py  admin_controller.py  business_config_controller.py  business_controller.py  category_controller.py  chat_controller.py  health_controller.py  order_controller.py  session_controller.py  telegram_controller.py  tenant_access_admin_controller.py  tenant_auth_controller.py  tenant_controller.py  tenant_portal_controller.py  user_controller.py
core/docs/: redis-session-architecture.md
core/domain/: __init__.py  business_config.py
core/dtos/: __init__.py
core/exceptions/: __init__.py  config_exceptions.py  conversation_exceptions.py  global_handler.py  tenant_exceptions.py  user_exceptions.py
core/jobs/: __init__.py  alerts.py  maintenance.py  sessions.py  telegram.py
core/middleware/: request_id.py  tenant_resolver.py
core/models/: __init__.py  business_config.py  cart.py  category.py  channel_route.py  conversation.py  knowledge_base.py  message.py  order.py  product.py  system_admin.py  system_setting.py  tenant.py  tenant_auth.py  user.py
core/repositories/: __init__.py  base.py  business_config_repository.py  channel_route_repository.py  conversation_repository.py  kb_repository.py  message_repository.py  product_repository.py  system_setting_repository.py  tenant_repository.py  user_repository.py
core/scripts/: analyze_telegram_latency.py  benchmark_bot.py  seed_db.py  seed_general_products.py  simulate_customer.py
core/services/: __init__.py  agent_factory.py  alert_service.py  business_config_cache_service.py  business_config_service.py  cart_service.py  catalog_cache_service.py  category_service.py  chat_service.py  conversation_reset_service.py  conversation_service.py  embedding_service.py  job_dispatcher.py  kb_service.py  llm_service.py  order_service.py  product_service.py  rag_context_builder.py  rag_policy.py  redis_session_service.py  session_service_factory.py  telegram_service.py  tenant_auth_service.py  tenant_service.py  (+2 more)
(+113 files in other folders)
